# Copernicus-FM

./: LICENSE  NOTICE  README.md
Copernicus-Bench/: .gitignore  README.md  demo_load_dataset.ipynb  pyproject.toml
Copernicus-Bench/results/: README.md
Copernicus-Bench/scripts/: exp_config_copernicusfm.py  exp_config_croma.py  exp_config_dofa.py  exp_config_softcon.py  exp_config_vit.py  exp_config_vit_sup.py  run.sh
Copernicus-Bench/src/: factory.py  main.py
Copernicus-Bench/src/configs/: config.yaml
Copernicus-Bench/src/configs/dataset/: base_dataset.yaml  cobench_aqno2_s5p.yaml  cobench_aqo3_s5p.yaml  cobench_bigearthnet_s1.yaml  cobench_bigearthnet_s2.yaml  cobench_biomass_s3.yaml  cobench_cloud_s2.yaml  cobench_cloud_s3.yaml  cobench_dfc2020_s1.yaml  cobench_dfc2020_s2.yaml  cobench_eurosat_s1.yaml  cobench_eurosat_s2.yaml  cobench_flood_s1.yaml  (+3 more)
Copernicus-Bench/src/datasets/: cobench_airqualitys5p_wrapper.py  cobench_bigearthnets12_wrapper.py  cobench_bigearthnets12_wrapper_old.py  cobench_biomasss3_wrapper.py  cobench_clouds2_wrapper.py  cobench_clouds3_wrapper.py  cobench_dfc2020s12_wrapper.py  cobench_eurosats1_wrapper.py  cobench_eurosats2_wrapper.py  cobench_floods1_wrapper_old.py  cobench_lc100clss3_wrapper.py  cobench_lc100segs3_wrapper.py  cobench_lczs12_wrapper.py
Copernicus-Bench/src/foundation_models/: __init__.py  copernicusfm_wrapper.py  croma_wrapper.py  dofa_wrapper.py  lightning_task.py  softcon_wrapper.py  vit_wrapper.py
Copernicus-Bench/src/util/: misc.py  pos_embed.py
Copernicus-Bench/tools/: download_copernicus_bench.sh
(+107 files in other folders)
